GET and POST endpoints completed and tested to be functional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.render-hidden-markers-before-checkboxes=true
 spring.mvc.hiddenmethod.filter.enabled=true
+server.port=8081
 
 logging.level.org=INFO
 logging.level.blog=INFO
