--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=CorpSuite-Log-Svc
-spring.datasource.url=jdbc:mysql://localhost:3306/${DB_NAME}?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${DB_HOSTNAME:localhost}:3306/corp_suite-log-svc?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.render-hidden-markers-before-checkboxes=true
 spring.mvc.hiddenmethod.filter.enabled=true
-server.port=8081
+server.port=${SERVER_PORT:8081}
 
 logging.level.org=INFO
 logging.level.blog=INFO
