--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         distribution: 'corretto'
         cache: maven
     - name: Build with Maven
-      run: mvn clean install -X
+      run: mvn clean install -e -X
       
     - name: Login to Docker
       uses: docker/login-action@v2
