--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>3.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
